{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 89,
  "lineage": "f8672e1c-1c3b-de18-5b7c-479709ac13c1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/backendAddressPools/backend-pool",
                "ip_addresses": [
                  "10.0.2.4",
                  "10.0.2.5"
                ],
                "name": "backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/backendHttpSettingsCollection/http-settings",
                "name": "http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/probes/health-probe",
                "probe_name": "health-probe",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/frontendIPConfigurations/frontend-ip-config",
                "name": "frontend-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/publicIPAddresses/pip-appgw-prod",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/frontendPorts/http-port",
                "name": "http-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-appgw"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/frontendIPConfigurations/frontend-ip-config",
                "frontend_ip_configuration_name": "frontend-ip-config",
                "frontend_port_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/frontendPorts/http-port",
                "frontend_port_name": "http-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier",
            "identity": [],
            "location": "southeastasia",
            "name": "appgw-prod-2tier",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/probes/health-probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "health-probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 80,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/backendAddressPools/backend-pool",
                "backend_address_pool_name": "backend-pool",
                "backend_http_settings_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/backendHttpSettingsCollection/http-settings",
                "backend_http_settings_name": "http-settings",
                "http_listener_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/applicationGateways/appgw-prod-2tier/requestRoutingRules/routing-rule",
                "name": "routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-2tier-app",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": null,
                "disabled_protocols": null,
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "2-Tier-App"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.backend",
            "azurerm_public_ip.appgw",
            "azurerm_resource_group.main",
            "azurerm_subnet.appgw",
            "azurerm_subnet.backend",
            "azurerm_virtual_machine_extension.iis",
            "azurerm_virtual_network.main",
            "azurerm_windows_virtual_machine.backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/networkInterfaces/nic-backend-prod-1",
            "internal_domain_name_suffix": "1kx5jtdbfwcevnaj044pd2z2ec.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-backend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southeastasia",
            "name": "nic-backend-prod-1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-2tier-app",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "2-Tier-App"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/networkInterfaces/nic-backend-prod-2",
            "internal_domain_name_suffix": "1kx5jtdbfwcevnaj044pd2z2ec.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-backend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southeastasia",
            "name": "nic-backend-prod-2",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "rg-2tier-app",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "2-Tier-App"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/networkSecurityGroups/nsg-appgw-prod",
            "location": "southeastasia",
            "name": "nsg-appgw-prod",
            "resource_group_name": "rg-2tier-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAzureLoadBalancer",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSInbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManager",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "2-Tier-App"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/networkSecurityGroups/nsg-backend-prod",
            "location": "southeastasia",
            "name": "nsg-backend-prod",
            "resource_group_name": "rg-2tier-app",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSFromAppGW",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPFromAppGW",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowInternetOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInternetInbound",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "2-Tier-App"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/publicIPAddresses/pip-appgw-prod",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.212.104.155",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "pip-appgw-prod",
            "resource_group_name": "rg-2tier-app",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "2-Tier-App"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-appgw",
            "name": "snet-appgw",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-2tier-app",
            "virtual_network_name": "vnet-prod-2tier"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-backend",
            "name": "snet-backend",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-2tier-app",
            "virtual_network_name": "vnet-prod-2tier"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-appgw",
            "network_security_group_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/networkSecurityGroups/nsg-appgw-prod",
            "subnet_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-appgw"
          },
          "dependencies": [
            "azurerm_network_security_group.appgw",
            "azurerm_resource_group.main",
            "azurerm_subnet.appgw",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-backend",
            "network_security_group_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/networkSecurityGroups/nsg-backend-prod",
            "subnet_id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier/subnets/snet-backend"
          },
          "dependencies": [
            "azurerm_network_security_group.backend",
            "azurerm_resource_group.main",
            "azurerm_subnet.backend",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ccf4afda-2d61-4a84-b409-d7bcf1f33c22",
            "id": "/subscriptions/e4ae0d21-096e-49c5-9d72-37f8bde8a8a3/resourceGroups/rg-2tier-app/providers/Microsoft.Network/virtualNetworks/vnet-prod-2tier",
            "location": "southeastasia",
            "name": "vnet-prod-2tier",
            "resource_group_name": "rg-2tier-app",
            "tags": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Project": "2-Tier-App"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}